# clever-chat

./: .clever.json  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  start.sh
backend/: .env.example  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  run_worker.py
backend/app/: __init__.py  worker.py
backend/app/api/: auth.py  chat.py  conversations.py  media.py  preferences.py  providers.py  schemas.py
backend/app/core/: __init__.py  config.py  database.py  locks.py  process_pool.py  security.py
backend/app/graph/: __init__.py  builder.py  state.py
backend/app/graph/nodes/: input_validator.py  llm_caller.py  prompt_builder.py  response_finalizer.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  chat_resource.py  conversation.py  conversation_share.py  discovered_model.py  embeddings.py  media_asset.py  message.py  provider_connection.py  session.py  user.py  user_preferences.py
backend/app/services/: discovery.py  extractor.py  s3_storage.py  title_generator.py
backend/clevercloud/: python.json
backend/scratch/: list_models.py  read_conversation_messages.py  read_production_messages.py  read_raw_db.py  test_detect.py  test_raw_stream.py  test_stream.py
db/: init.sql
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  providers.tsx  theme.css
frontend/clevercloud/: node.json
frontend/components/: Toast.tsx
frontend/hooks/: useSSEStream.ts
frontend/lib/: api.ts  motion.ts  themes.ts  utils.ts
(+30 files in other folders)
