[project]
name = "cleverchat-backend"
version = "0.1.0"
description = "CleverChat AI Platform Backend"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22",
    "uvloop>=0.21",
    
    # Database
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pgvector>=0.3",
    
    # Configuration
    "pydantic-settings>=2.3",
    
    # Authentication
    "passlib[bcrypt]>=1.7",
    "PyJWT>=2.8",
    "cryptography>=42",
    
    # AI / LLM
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0",
    "openai>=1.30",
    
    # HTTP
    "httpx>=0.27",
    
    # Logging
    "structlog>=24",
    
    # Media Processing
    "pillow>=11",
    "pypdf>=5",
    "python-docx>=1",
    
    # Utilities
    "python-multipart>=0.0.9",
    "aiofiles>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
